Some alignment fixes for social buttons

--- a/src/components/AaFooter/AaFooter.scss
+++ b/src/components/AaFooter/AaFooter.scss
@@ -21,13 +21,11 @@ footer.footer {
 }
 
 .footerSocial {
-  display: flex;
-  position: absolute;
-  right: 40px;
+  margin-bottom: -10px;
   ul {
     display: flex;
     li {
-      margin-left: 20px;
+      margin-left: 10px;
       a {
         color: $secondary;
         &:hover {
@@ -35,6 +33,15 @@ footer.footer {
         }
       }
     }
+  }
+}
+
+.top .footerSocial {
+  position: absolute;
+  right: 60px;
+  bottom: 40px;
+  a {
+    color: #000000;
   }
 }
 
@@ -56,7 +63,7 @@ footer.footer {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
   footer.footer {
     justify-content: left;
   }
