--- a/src/components/AaTextElement/AaTextElement.scss
+++ b/src/components/AaTextElement/AaTextElement.scss
@@ -29,9 +29,9 @@
         font-size: 1.8em
     }
     h2, h2:not(:first-child) {
-        margin-top:0;
+        margin-top: 0;
+        margin-bottom: 0;
         color: #808285;
-        margin-bottom: 100px;
     }
 }
 
